tests/compile_fail/takes_owned_self.stderr
error: macro definition is not supported in `trait`s or `impl`s
 --> $DIR/takes_owned_self.rs:6:5
  |
6 |     #[named]
  |     ^^^^^^^^
  |
  = help: consider moving the macro definition out to a nearby module scope
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: `named` does not currently support functions which take `self`.
 --> $DIR/takes_owned_self.rs:7:20
  |
7 |     fn always_true(self) -> bool {
  |                    ^^^^
